Fix flickers issue in TM, save translation when move to next, dropdown z-index

--- a/app/components/ToggleSwitch/index.css
+++ b/app/components/ToggleSwitch/index.css
@@ -39,7 +39,10 @@
   top: 50%;
   transform: translateY(-50%);
   border-radius: calc(var(--Switch-rhythm) * .75);
-  transition: all .2s ease-out;
+  /* disable transition delay which causes flickers in chrome
+    transition: all .2s ease-out;
+  */
+  transition: all ease-out;
 }
 
 .Switch-label:before {
