--- a/app/components/TransUnit/index.css
+++ b/app/components/TransUnit/index.css
@@ -128,7 +128,6 @@
 .TransUnit-panelFooter,
 .TransUnit-itemHeader {
   position: absolute;
-  z-index: var(--TransUnit-header-z-index);
   right: 0;
   left: 0;
   width: 100%;
@@ -160,6 +159,7 @@
 
 .TransUnit-panelFooter {
   bottom: calc(var(--TransUnit-rhythm) * -.75);
+  z-index: var(--TransUnit-header-z-index);
 }
 
 .TransUnit-heading {
@@ -277,6 +277,10 @@
   padding-top: calc(var(--TransUnit-rhythm) * .75);
   padding-bottom: calc(var(--TransUnit-rhythm) * .75);
   opacity: .8;
+}
+
+.TransUnit.is-focused .TransUnit-status {
+  z-index: 300;
 }
 
 /**
